--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="JAMSHI">
     <title>sainu.me</title>
     <!-- font icons -->
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
     <!-- Bootstrap + sainu main styles -->
     <link rel="stylesheet" href="./assets/css/sainu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -99,6 +99,8 @@
                             kingdom.</strong> I am proud to have received 4 UX/UI Design awards from 3 reputed fortune
                         500 companies.
                     </p>
+                    <h6>sainumechpd@gmail.com</h6>
+                    <h6>+91 7760540078</h6>
                     <a href="./assets/image/UX_Sainudheen.pdf" download="sainu_resume" class=""><button
                             class="btn-rounded btn btn-outline-primary mt-4">Download CV</button></a>
                 </div>
@@ -230,9 +232,77 @@
             <h6 class="section-title mb-4">Portfolio</h6>
 
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pf_1.png" alt="">
+                        <img src="./assets/image/portfolio/pg_1.png" alt="">
+                        <!-- <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Project Title</h5>
+                                <a href="./portfolio/project_1.html">
+                                    <div class="icon more-icon">&#8943;</div></i>
+                                </a>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="img-wrapper">
+                        <img src="./assets/image/portfolio/pg_2.png" alt="">
+                        <!-- <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Project Title</h5>
+                                <a href="./portfolio/project_1.html">
+                                    <div class="icon more-icon">&#8943;</div></i>
+                                </a>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="img-wrapper">
+                        <img src="./assets/image/portfolio/pg_3.png" alt="">
+                        <!-- <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Project Title</h5>
+                                <a href="./portfolio/project_1.html">
+                                    <div class="icon more-icon">&#8943;</div></i>
+                                </a>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="img-wrapper">
+                        <img src="./assets/image/portfolio/pg_4.png" alt="">
+                        <!-- <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Project Title</h5>
+                                <a href="./portfolio/project_1.html">
+                                    <div class="icon more-icon">&#8943;</div></i>
+                                </a>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="img-wrapper">
+                        <img src="./assets/image/portfolio/pg_5.png" alt="">
+                        <!-- <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Project Title</h5>
+                                <a href="./portfolio/project_1.html">
+                                    <div class="icon more-icon">&#8943;</div></i>
+                                </a>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="img-wrapper">
+                        <img src="./assets/image/portfolio/pg_6.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
@@ -242,65 +312,46 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
                     <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pf_2.png" alt="">
-                        <div class="overlay">
+                        <img src="./assets/image/portfolio/pg_7.png" alt="">
+                        <!-- <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
-                                <a href="contact-me">
+                                <a href="./portfolio/project_1.html">
                                     <div class="icon more-icon">&#8943;</div></i>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-
-                <div class="col-sm-4">
-                    <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pf_3.png" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-md-4">
                     <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pf_4.png" alt="">
-                        <div class="overlay">
+                        <img src="./assets/image/portfolio/pg_8.png" alt="">
+                        <!-- <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
-                                <a href="contact-me">
+                                <a href="./portfolio/project_1.html">
                                     <div class="icon more-icon">&#8943;</div></i>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pf_5.png" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-md-4">
                     <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pf_6.png" alt="">
-                        <div class="overlay">
+                        <img src="./assets/image/portfolio/pg_9.png" alt="">
+                        <!-- <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
-                                <a href="">
+                                <a href="./portfolio/project_1.html">
                                     <div class="icon more-icon">&#8943;</div></i>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -508,29 +559,31 @@
             <div class="container">
                 <div class="owl-carousel" id="owl-carousel">
                     <div class="item">
-                        <img class="img-fluid" src="./assets/image/clients/c-1.png" alt="brand-image" />
-
+                        <img class="img-fluid" src="./assets/image/clients/cl_1.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/c-2.png" alt="brand-image" />
+                        <img src="assets/image/clients/cl_2.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/c-3.png" alt="brand-image" />
+                        <img src="assets/image/clients/cl_3.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/c-4.png" alt="brand-image" />
+                        <img src="assets/image/clients/cl_4.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/c-5.png" alt="brand-image" />
+                        <img src="assets/image/clients/cl_5.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/c-6.png" alt="brand-image" />
+                        <img src="assets/image/clients/cl_6.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/c-7.png" alt="brand-image" />
+                        <img src="assets/image/clients/cl_7.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/c-8.png" alt="brand-image" />
+                        <img src="assets/image/clients/cl_8.png" alt="brand-image" />
+                    </div><!--/.item-->
+                    <div class="item">
+                        <img src="assets/image/clients/cl_9.png" alt="brand-image" />
                     </div><!--/.item-->
 
                 </div><!--/.owl-carousel-->
@@ -541,7 +594,7 @@
 
     <!-- Resume sectionn -->
 
-    <section class="section resume" id="resume">
+    <section class="section resume mx-5" id="resume">
         <div class="container text-center">
             <p class="section-subtitle">bhal ?</p>
             <h6 class="section-title mb-5">Resume</h6>
@@ -565,15 +618,16 @@
                     </div>
                     <div class="card">
                         <p class="mb-3"> 2010 - 2012</p>
-                        <p class="mb-2"><strong>M.B.A in Production Managment</strong></p>
+                        <p class="mb-2"><strong>M.B.A in Master of business administarion</strong></p>
                         <p class="mb-2"><strong>Indian School of Business Management - Distance
                             </strong> </p>
-                        <p class="mb-2 p-class"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="mb-2 p-class"> Master of Business Administration
+                            MBA graduated with expertise in strategic management, project leadership, and data analysis. Proven ability to drive results and contribute to organizational success through strong analytical and communication skills.</p>
                         <hr />
                     </div>
                     <div class="card">
                         <p class="mb-3"> 2005 - 2008</p>
-                        <p class="mb-2"><strong>Diploma in Tool and die Engineering</strong></p>
+                        <p class="mb-2"><strong>Diploma in Tool and die</strong></p>
                         <p class="mb-2"><strong>Government polytechnic college, Thrissur, Kerala-Regular</strong>
                         </p>
                         <p class="mb-2 p-class"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -652,9 +706,9 @@
                 @sainu
             </p>
             <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="javascript:void(0)" class="link"><i class="ti-linkedin"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
+                <a href="https://www.linkedin.com/in/sainu123" class="link"><i class="fab fa-brands fa-linkedin-in"></i></a>
+                <a href="https://dribbble.com/sainumechpd" class="link"><i class="fab fa-brands fa-dribbble"></i></a>
+                <a href="https://www.behance.net/sainumechpd" class="link"><i class="fab fa-behance"></i></a>
             </div>
         </footer>
     </div> <!-- end of page footer -->
