--- a/index.html
+++ b/index.html
@@ -234,7 +234,20 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pg_1.png" alt="">
+                        <img src="./assets/image/portfolio/pf_1.png" alt="">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Little Brahma Hire Designers</h5>
+                                <a href="./portfolio/project_1.html">
+                                    <div class="icon more-icon">&#8943;</div></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="img-wrapper">
+                        <img src="./assets/image/portfolio/pf_2.png" alt="">
                         <!-- <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
@@ -247,20 +260,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pg_2.png" alt="">
-                        <!-- <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="./portfolio/project_1.html">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div> -->
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pg_3.png" alt="">
+                        <img src="./assets/image/portfolio/pf_3.png" alt="">
                         <!-- <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
@@ -275,8 +275,8 @@
 
             <div class="row">
                 <div class="col-md-4">
-                    <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pg_4.png" alt="">
+                    <div class="img-wrapper grid-item">
+                        <img src="./assets/image/portfolio/pf_4.png" alt="">
                         <!-- <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
@@ -288,8 +288,8 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pg_5.png" alt="">
+                    <div class="img-wrapper grid-item">
+                        <img src="./assets/image/portfolio/pf_5.png" alt="">
                         <!-- <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
@@ -301,23 +301,65 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pg_6.png" alt="">
-                        <div class="overlay">
+                    <div class="img-wrapper grid-item">
+                        <img src="./assets/image/portfolio/pf_6.png" alt="">
+                        <!-- <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
                                 <a href="./portfolio/project_1.html">
                                     <div class="icon more-icon">&#8943;</div></i>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="img-wrapper grid-item">
+                        <img src="./assets/image/portfolio/pf_7.png" alt="">
+                        <!-- <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Project Title</h5>
+                                <a href="./portfolio/project_1.html">
+                                    <div class="icon more-icon">&#8943;</div></i>
+                                </a>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="img-wrapper grid-item">
+                        <img src="./assets/image/portfolio/pf_8.png" alt="">
+                        <!-- <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Project Title</h5>
+                                <a href="./portfolio/project_1.html">
+                                    <div class="icon more-icon">&#8943;</div></i>
+                                </a>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="img-wrapper grid-item">
+                        <img src="./assets/image/portfolio/pf_9.png" alt="">
+                        <!-- <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Project Title</h5>
+                                <a href="./portfolio/project_1.html">
+                                    <div class="icon more-icon">&#8943;</div></i>
+                                </a>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
                     <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pg_7.png" alt="">
+                        <img src="./assets/image/portfolio/pf_10.png" alt="">
                         <!-- <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
@@ -330,20 +372,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pg_8.png" alt="">
-                        <!-- <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="./portfolio/project_1.html">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div> -->
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pg_9.png" alt="">
+                        <img src="./assets/image/portfolio/pf_11.png" alt="">
                         <!-- <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
