--- a/index.html
+++ b/index.html
@@ -235,14 +235,13 @@
                 <div class="col-md-4">
                     <div class="img-wrapper">
                         <img src="./assets/image/portfolio/pf_1.png" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Little Brahma Hire Designers</h5>
-                                <a href="./portfolio/project_1.html">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
+                        <a href="./portfolio/project_1.html">
+                            <div class="overlay">
+                                <div class="overlay-infos">
+                                    <h5>Little Brahma Hire Designers</h5>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -314,7 +313,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="row">
                 <div class="col-md-4">
                     <div class="img-wrapper grid-item">
@@ -399,7 +398,7 @@
                     <h6 class="title text-light">Want to see more works ?</h6>
                     <p class="m-0 text-light">Always feel free to contact</p>
                 </div>
-                <div class="col-sm offset-sm-2 offset-md-3" >
+                <div class="col-sm offset-sm-2 offset-md-3">
                     <a onclick="navigateTo('contact')" href="#contact"><button
                             class="btn btn-lg my-font btn-light rounded">Contact me</button></a>
                 </div>
@@ -454,7 +453,7 @@
                                     </div>
                                     <div class="testimonial-card-body">
                                         <p class="testimonial-card-subtitle">I am greatly impressed and inspired by
-                                            Sainudheen’s
+                                            Sainudheen's
                                             professionalism and creativity.
                                             He takes complete ownership of the projects and drives the projects with
                                             sheer
@@ -637,7 +636,7 @@
                     </div>
                     <div class="card">
                         <p class="mb-3"> 2012 - 2014</p>
-                        <p class="mb-2"><strong>M.sc in Product Design</strong></p>
+                        <p class="mb-2"><strong>M.sc - Product Design</strong></p>
                         <p class="mb-2"><strong>Coventry University United Kingdom Regular</strong> </p>
                         <p class="mb-2 p-class"> Master Degree in Product Design covered areas such as user-centered
                             design,
@@ -647,21 +646,16 @@
                     </div>
                     <div class="card">
                         <p class="mb-3"> 2010 - 2012</p>
-                        <p class="mb-2"><strong>M.B.A in Master of business administarion</strong></p>
-                        <p class="mb-2"><strong>Indian School of Business Management - Distance
+                        <p class="mb-2"><strong>M.B.A - Master of business administarion</strong></p>
+                        <p class="mb-2"><strong>Indian School of Business Management
                             </strong> </p>
                         <p class="mb-2 p-class"> Master of Business Administration
-                            MBA graduated with expertise in strategic management, project leadership, and data analysis. Proven ability to drive results and contribute to organizational success through strong analytical and communication skills.</p>
+                            MBA graduated with expertise in strategic management, project leadership, and data analysis.
+                            Proven ability to drive results and contribute to organizational success through strong
+                            analytical and communication skills.</p>
                         <hr />
                     </div>
-                    <div class="card">
-                        <p class="mb-3"> 2005 - 2008</p>
-                        <p class="mb-2"><strong>Diploma in Tool and die</strong></p>
-                        <p class="mb-2"><strong>Government polytechnic college, Thrissur, Kerala-Regular</strong>
-                        </p>
-                        <p class="mb-2 p-class"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <hr />
-                    </div>
+
 
                 </div>
             </div>
@@ -735,7 +729,8 @@
                 @sainu
             </p>
             <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="https://www.linkedin.com/in/sainu123" class="link"><i class="fab fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/sainu123" class="link"><i
+                        class="fab fa-brands fa-linkedin-in"></i></a>
                 <a href="https://dribbble.com/sainumechpd" class="link"><i class="fab fa-brands fa-dribbble"></i></a>
                 <a href="https://www.behance.net/sainumechpd" class="link"><i class="fab fa-behance"></i></a>
             </div>
